--- a/Lab 1/style.css
+++ b/Lab 1/style.css
@@ -28,7 +28,7 @@
 input{
     border: none;
     border-radius: 5px;
-    height: 3vh;
+    height: 4vh;
 }
 
 #plano{
@@ -49,14 +49,28 @@ h1{
 }
 
 .btn{
-    margin-left: 65%;
+    margin-left: 58%;
 }
 
 button{
-    padding: 7px;
+    padding: 8px;
     background-color: rgb(2, 2, 88);
     border: none;
     border-radius: 5px;
     color: aliceblue;
 
+}
+
+.calcInfo {
+    margin-bottom: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 5px;
+    background-color: #f0f0f0;
+    border-radius: 5px;
+    font-family: Arial, sans-serif;
+}
+
+.contAnalise{
+    margin-top: 15px;
 }
